[package]
name = "enpass-cli"
version = "0.1.1"
authors = ["Ashkan Kiani <ashkan@zephyr>"]
edition = "2018"
license = "Apache-2.0"
description = "A cli interface to decrypting the enpass database"
homepage = "https://github.com/norcalli/enpass-cli"
repository = "https://github.com/norcalli/enpass-cli"

[profile.release]
lto = false
opt-level = 3

[dependencies]
time = "0.1.40"
rusqlcipher = { version = "0.14.9", features = ["sqlcipher"] }
rust-crypto = "0.2.36"
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
log = "0.4.4"
env_logger = { version = "0.5.13", default-features = false, features = [] }
structopt = "0.2.10"
derive_more = "0.14.0"
